--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -190,7 +190,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  > .lang {
+  > .mod-reserve {
     display: none;
   }
 }
@@ -484,42 +484,18 @@
 }
 @media screen and (max-width: 992px) {
   .header-bottom__container {
-    > .lang {
+    > .mod-reserve {
       display: flex;
-      margin-right: 12px;
       margin-left: auto;
       margin-top: 4px;
-      ul {
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        li {
-          &::after {
-            content: '/';
-            margin-left: 6px;
-            font-size: 18px;
-            font-weight: bold;
-            line-height: 1.2;
-            margin-right: 6px;
-            color: $black;
-          }
-          &:last-child {
-            &::after {
-              content: none;
-            }
-          }
-          a {
-            font-size: 18px;
-            font-weight: bold;
-            line-height: 1.2;
-            color: $black;
-            text-decoration: none;
-            &.active {
-              color: #E0C18D;
-            }
-          }
-        }
-      }
+      color: $green;
+      font-size: 13px;
+      font-weight: 500;
+      margin-right: 20px;
+      background: rgba(255, 255, 255, 0);
+      border: none;
+      padding: 0;
+      font-family: $second-font;
     }
   }
   .header-top {
@@ -625,9 +601,9 @@
   .hidden-menu {
     display: flex;
 
-    width: calc(100% + 24px);
-    margin-left: -12px;
-    margin-right: -12px;
+    width: calc(100% + 32px);
+    margin-left: -16px;
+    margin-right: -16px;
     margin-top: 12px;
     padding-top: 12px;
     border-top: 1px solid #E6E6E6;
@@ -771,9 +747,9 @@
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-    width: calc(100% + 24px);
-    margin-left: -12px;
-    margin-right: -12px;
+    width: calc(100% + 32px);
+    margin-left: -16px;
+    margin-right: -16px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.4s ease, padding 0.3s ease;
@@ -787,9 +763,7 @@
   }
 }
 @media screen and (max-width: 767px) {
-  .header-info {
-    display: none;
-  }
+
 }
 @media screen and (max-width: 700px) {
   .sub-menu {
@@ -799,6 +773,20 @@
   }
   .menu-column {
     width: 50%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .header-info .text {
+    padding-left: 0;
+    padding-right: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    p {
+      text-align: center;
+      margin-right: 0;
+      margin-bottom: 3px;
+    }
   }
 }
 @media screen and (max-width: 450px) {
