--- a/app/scss/_hero-slider.scss
+++ b/app/scss/_hero-slider.scss
@@ -33,7 +33,7 @@
     right: 0;
     bottom: 0;
     overflow: hidden;
-    img {
+    img, picture {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -48,11 +48,69 @@
 .home-hero__text {
   width: 100%;
   height: 100%;
-  padding: 144px 0 50px;
+  padding: 150px 0 50px;
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 567px;
+  span {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 1.2;
+    color: #FFFFFF;
+    margin-bottom: 45px;
+    display: inline-block;
+  }
+
+  .btns {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    .btn {
+      margin-right: 39px;
+    }
+  }
 }
+
 @media screen and (max-width: 2000px) {
   .hero-home {
     height: 494px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .home-hero__text  {
+    padding-top: 120px;
+    span {
+      font-size: 40px;
+      line-height: 1.2;
+    }
+  }
+  .home-hero-slider .slides-btn {
+    top: 80px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .home-hero-slider .slides-btn {
+    top: 70px;
+  }
+  .home-hero__text  {
+    padding-top: 95px;
+    span {
+      font-size: 34px;
+      line-height: 1.2;
+      margin-bottom: 55px;
+    }
+    .btns {
+      flex-direction: column;
+      align-items: flex-start;
+      .btn {
+        margin-bottom: 45px;
+        margin-right: 0;
+      }
+    }
   }
 }
