--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -224,6 +224,27 @@ p, h1, ul, ol, h2, h3, h4, h5, h6 {
     }
 
   }
+  &--orange {
+    background: #E0C18D;
+    color: #fff;
+    border: 1px solid #E0C18D;
+    padding: 11px 45px;
+    &:hover {
+      color: #E0C18D;
+      background: #fff;
+    }
+
+  }
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 .slides-btn {
   width: 20px;
@@ -340,6 +361,7 @@ p, h1, ul, ol, h2, h3, h4, h5, h6 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    margin-right: 9%;
     p {
       font-style: normal;
       font-weight: 600;
@@ -364,7 +386,88 @@ p, h1, ul, ol, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: flex-start;
   gap: 20px 30px;
+  flex-grow: 1;
 }
+
+.booking-input {
+  position: relative;
+  border: 1px solid #E8E4DE;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 3px 30px 3px 10px;
+  height: 42px;
+  width: 110px;
+  .over {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    span {
+      font-family: $second-font;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 18px;
+      letter-spacing: 0.05em;
+      color: #A9A9A9;
+    }
+    &::after {
+      width: 18px;
+      height: 18px;
+      display: inline-block;
+      content: '';
+      position: absolute;
+      left: 100%;
+      top: 50%;
+      transform: translate(0, -50%);
+      background: url("../img/hum-ic.svg") no-repeat center / 100%;
+
+    }
+
+  }
+  &.date {
+    width: auto;
+    flex-grow: 1;
+    .over {
+      &::after {
+        background: url("../img/cale-ic.svg") no-repeat center / 100%;
+      }
+    }
+  }
+  input {
+    display: flex;
+    align-items: flex-end;
+    position: absolute !important;
+    background: rgba(255, 255, 255, 0);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px 30px 3px 10px;
+    border: none;
+    outline: none;
+    vertical-align: bottom;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #3A3A3A;
+    font-family: $second-font;
+    &::placeholder {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      color: #3A3A3A;
+      font-family: $second-font;
+    }
+  }
+}
+
 @import 'header';
 @import 'hero-slider';
 @import "modal";
