--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -675,7 +675,7 @@
     left: 0;
     right: 0;
     background: #F7F7F7;
-    padding: 12px;
+    padding: 12px 16px;
     box-sizing: border-box;
     height: calc(100vh - 60px);
     overflow-y: auto;
