--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1138,7 +1138,7 @@ input[type=number] {
     justify-content: center;
     position: relative;
     .btns {
-      //display: none;
+      display: none;
       .slides-btn {
         z-index: 2;
         position: absolute;
